--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "gsap": "^3.12.5",
     "input-otp": "^1.2.4",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "openai": "^4.77.3",
