--- a/package.json
+++ b/package.json
@@ -48,9 +48,13 @@
     "@tanstack/react-query": "^5.64.1",
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
     "@tensorflow/tfjs": "^4.22.0",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "compression": "^1.7.5",
+    "cookie-parser": "^1.4.7",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.38.3",
     "drizzle-zod": "^0.6.0",
