--- a/package.json
+++ b/package.json
@@ -45,19 +45,21 @@
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
-    "@tanstack/react-query": "^5.60.5",
+    "@tanstack/react-query": "^5.64.1",
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
     "@tensorflow/tfjs": "^4.22.0",
+    "@types/cors": "^2.8.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.38.3",
     "drizzle-zod": "^0.6.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "framer-motion": "^11.13.1",
+    "framer-motion": "^11.17.0",
     "gsap": "^3.12.5",
     "input-otp": "^1.2.4",
     "lottie-react": "^2.4.0",
@@ -66,7 +68,7 @@
     "openai": "^4.77.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "postgres": "^3.4.3",
+    "postgres": "^3.4.5",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -85,7 +87,7 @@
   "devDependencies": {
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@types/express": "4.17.21",
+    "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
     "@types/passport": "^1.0.16",
@@ -100,7 +102,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3",
+    "typescript": "^5.6.3",
     "vite": "^5.4.9"
   },
   "optionalDependencies": {
