Agent query: Is the face detection working now? Can you see your face in the video feed and the face mesh overlay?
Add analysis page and update face analysis component to use TensorFlow.js for face detection.

Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/7757a243-6df5-4a4a-be1c-bec23173934d/272d279a-4d43-43f0-99e2-9df548148ab4.jpg

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
     "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/face_detection": "^0.4.1646425229",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -46,8 +47,12 @@
     "@react-three/fiber": "^8.17.10",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.64.1",
+    "@tensorflow-models/face-detection": "^1.0.3",
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
     "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "@tensorflow/tfjs-converter": "^4.22.0",
+    "@tensorflow/tfjs-core": "^4.22.0",
     "@types/cors": "^2.8.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
